--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
     "expo": "~38.0.0",
     "expo-asset": "~8.1.7",
     "expo-constants": "~9.1.1",
-    "react": "~16.11.0",
+    "react": "^16.13.1",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "0.11.7"
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-reanimated": "^1.13.0",
+    "react-native-screens": "^2.10.1",
+    "react-native-web": "0.11.7",
+    "react-navigation": "^4.4.0",
+    "react-navigation-tabs": "^2.9.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.0"
